--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,9 +26,9 @@
   --heading-font-family: "IvyMode", serif;
 
   /* body sizes */
-  --body-font-size-m: 12px;
-  --body-font-size-s: 11px;
-  --body-font-size-xs: 10px;
+  --body-font-size-m: 14px;
+  --body-font-size-s: 12px;
+  --body-font-size-xs: 11px;
 
   /* heading sizes */
   --heading-font-size-xxl: 45px;
@@ -44,9 +44,9 @@
 
 @media (width >= 900px) {
   :root {
-    --body-font-size-m: 12px;
-    --body-font-size-s: 11px;
-    --body-font-size-xs: 10px;
+    --body-font-size-m: 14px;
+    --body-font-size-s: 12px;
+    --body-font-size-xs: 11px;
   }
 }
 
@@ -54,7 +54,7 @@ body {
   display: none;
   margin: 0;
   background-color: var(--background-color);
-  color: rgb(51 51 51);
+  color: var(--text-color);
   font-family: var(--body-font-family);
   font-size: var(--body-font-size-m);
   line-height: 1.4;
@@ -126,7 +126,7 @@ pre {
 }
 
 main > div {
-  margin: 0 16px;
+  margin: 0;
 }
 
 main .default-content-wrapper {
@@ -228,8 +228,11 @@ main > .section {
 }
 
 main > .section > div {
-  max-width: 1440px;
   margin: auto;
+}
+
+main > .section > [class*="-wrapper"]:not(.default-content-wrapper) {
+  max-width: none;
 }
 
 main > .section:first-of-type {
